# business_manager

./: .env.template  compose.yaml  pyproject.toml
src/: .env.template  index.html  main.py
src/calendar/schemas/: calendar.py
src/calendar/services/: calendar_service.py
src/calendars/services/: calendar_service.py
src/core/: config.py
src/core/dependencies/: __init__.py  depends.py
src/core/interfaces/: __init__.py  auth.py  common.py  permissions.py
src/core/models/: __init__.py  base.py  db_helper.py  user_token.py
src/core/providers/: __init__.py  jwt_provider.py  permission_validator_provider.py  token_provider.py
src/core/services/: jwt_service.py  uuid_generator_service.py
src/evaluations/interfaces/: interfaces.py
src/evaluations/models/: __init__.py  evaluation.py
src/evaluations/schemas/: evaluation.py
src/meetings/interfaces/: interfaces.py
src/meetings/models/: meeting.py
src/tasks/interfaces/: interfaces.py
src/tasks/models/: __init__.py  task.py
src/teams/interfaces/: __init__.py  interfaces.py
src/teams/models/: __init__.py  team.py
src/teams/schemas/: team.py
src/tests/: conftest.py
src/tests/providers/: test_jwt_provider.py
src/tests/unit/: test_permission_validator.py
src/users/constants/: __init__.py  password_hasher.py
src/users/interactors/: auth_interactors.py  interactos.py  user_interactos.py
src/users/interfaces/: __init__.py  interfaces.py
src/users/models/: __init__.py  user.py
src/users/providers/: bcrypt_password_hasher_provider.py  user_activation_manager_provider.py
(+7 files in other folders)
